--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<html lang="en" dir="ltr">
-
+<!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
   <title>Koshal's Personal Site</title>
+  <Link ref="stylesheet" href="css/styles.css">
 </head>
 
 <body>
