--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <Link ref="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body style="background-color:#DAEAF1;>
   <table cellspacing="20">
     <tr>
       <td>
