--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ allows the customer to create an account, deposit, or withdraw money.
   <hr size="3" noshade>
   <h2>PERSONAL DETAILS </h2>
   <p>
-    Email address - koshalsingh1022@gmail.com
+    Email address - koshalsingh1022@gmail.com<br>
     LinkedIn account - <a href="https://www.linkedin.com/in/koshal-singh-770116214/">https://www.linkedin.com/in/koshal-singh-770116214/</a><br>
   </p>
   <strong>Declaration - </strong>I hereby declare that the details furnished above are true and correct to the best of my
