--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <strong>Banking System </strong><a href="https://github.com/Koshal07/Banking_System"><strong>GitHub Link</strong></a>
     <ul>
       <li>
-        his is the program made using coursework that keeps the record of a person’s bank account, it usually
+        This is the program made using coursework that keeps the record of a person’s bank account, it usually
 allows the customer to create an account, deposit, or withdraw money.
       </li>
       <li>
